--- a/Analysis_Association_Correlation_Prediction/association_rules/fpgrowth.ipynb
+++ b/Analysis_Association_Correlation_Prediction/association_rules/fpgrowth.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "a0739b32",
    "metadata": {},
    "outputs": [],
@@ -103,6 +103,7 @@
     "    for i in wd:\n",
     "        if res[i]/l>=min_support:\n",
     "            patterns[i].append((tuple(z),res[i]))\n",
+    "            res[i]=0\n",
     "    if root.val!=None:\n",
     "        res[root.val]+=root.count\n",
     "    return res\n",
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "761b44d3",
    "metadata": {},
    "outputs": [
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "2f2412aa",
    "metadata": {},
    "outputs": [
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "d2840f26",
    "metadata": {},
    "outputs": [],
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "fecb1bea",
    "metadata": {},
    "outputs": [],
@@ -197,10 +198,10 @@
     "            else:\n",
     "                supp_a=support(a)\n",
     "            if supp_a==0:return\n",
-    "            conf = r/supp_a\n",
+    "            conf = support(a.union(b))/supp_a\n",
     "            if conf>1:\n",
     "                print(x,a)\n",
-    "            if conf>=0.55:\n",
+    "            if conf>=0.7:\n",
     "                s=\"(\"\n",
     "                for j in sorted(a):\n",
     "                    s+=j+\" ; \"\n",
@@ -215,12 +216,13 @@
     "    a.remove(x[i])\n",
     "    b.add(x[i])\n",
     "    func(a,b,i+1,x,r)\n",
-    "    b.remove(x[i])"
+    "    b.remove(x[i])\n",
+    "    func(a,b,i+1,x,r)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "08d29ead",
    "metadata": {},
    "outputs": [
@@ -236,7 +238,8 @@
     "d=0\n",
     "for b in patterns:\n",
     "    for a,c in patterns[b]:\n",
-    "        func(set(),set(),0,list(a)+[b],c)\n",
+    "        func(set(),{b},0,list(a),c)\n",
+    "        func({b},set(),0,list(a),c)\n",
     "    d+=1\n",
     "    print(d,end='\\r')\n",
     "        \n",
@@ -246,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "1f19b86c",
    "metadata": {},
    "outputs": [],
