--- a/Analysis_Association_Correlation_Prediction/association_rules/fpgrowth.ipynb
+++ b/Analysis_Association_Correlation_Prediction/association_rules/fpgrowth.ipynb
@@ -48,7 +48,8 @@
     "    def __init__(self,v=None):\n",
     "        self.val=v\n",
     "        self.child=dt(node)\n",
-    "        self.count=0"
+    "        self.count=0\n",
+    "        self.par=None"
    ]
   },
   {
@@ -64,6 +65,8 @@
     "    zz=root.child[x[i]]\n",
     "    zz.count+=1\n",
     "    zz.val=x[i]\n",
+    "    zz.par=root\n",
+    "    node_dict[x[i]].append(zz)\n",
     "    tree(zz,x,i+1)"
    ]
   },
@@ -74,6 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "node_dict=dt(list)\n",
     "root=node()\n",
     "for i in data:\n",
     "    tree(root,i,0)"
@@ -81,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "a0739b32",
    "metadata": {},
    "outputs": [],
@@ -106,14 +110,12 @@
     "            res[i]=0\n",
     "    if root.val!=None:\n",
     "        res[root.val]+=root.count\n",
-    "    return res\n",
-    "        \n",
-    "        "
+    "    return res   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "761b44d3",
    "metadata": {},
    "outputs": [
@@ -127,13 +129,12 @@
    ],
    "source": [
     "patterns=dt(list)\n",
-    "traverse(root,[])\n",
-    "print(len(patterns))"
+    "traverse(root,[])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "2f2412aa",
    "metadata": {},
    "outputs": [
@@ -163,28 +164,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "d2840f26",
+   "execution_count": 10,
+   "id": "d4f87e50",
    "metadata": {},
    "outputs": [],
    "source": [
     "def support(x):\n",
     "    word = min((len(ind[i]),i) for i in x)[1]\n",
     "    c=0\n",
-    "    for j in ind[word]:\n",
-    "        flag=False\n",
-    "        for i in x:\n",
-    "            if i not in data[j]:\n",
-    "                flag=True\n",
-    "                break\n",
-    "        if not flag:\n",
-    "            c+=1\n",
+    "    for j in node_dict[word]:\n",
+    "        zz=j.count\n",
+    "        qq=0\n",
+    "        while j and qq!=len(x):\n",
+    "            if j.val in x:qq+=1\n",
+    "            j=j.par\n",
+    "        if qq==len(x):\n",
+    "            c+=zz\n",
     "    return c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "fecb1bea",
    "metadata": {},
    "outputs": [],
@@ -193,14 +194,9 @@
     "def func(a,b,i,x,r):\n",
     "    if i>=len(x):\n",
     "        if a and b:\n",
-    "            if len(a)==1:\n",
-    "                supp_a=freq[list(a)[0]]\n",
-    "            else:\n",
-    "                supp_a=support(a)\n",
+    "            supp_a=support(a)\n",
     "            if supp_a==0:return\n",
     "            conf = support(a.union(b))/supp_a\n",
-    "            if conf>1:\n",
-    "                print(x,a)\n",
     "            if conf>=0.7:\n",
     "                s=\"(\"\n",
     "                for j in sorted(a):\n",
@@ -222,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "08d29ead",
    "metadata": {},
    "outputs": [
@@ -238,18 +234,16 @@
     "d=0\n",
     "for b in patterns:\n",
     "    for a,c in patterns[b]:\n",
+    "        \n",
     "        func(set(),{b},0,list(a),c)\n",
     "        func({b},set(),0,list(a),c)\n",
     "    d+=1\n",
-    "    print(d,end='\\r')\n",
-    "        \n",
-    "\n",
-    "    "
+    "    print(d,end='\\r') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "1f19b86c",
    "metadata": {},
    "outputs": [],
@@ -264,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ee32b1f",
+   "id": "a6898304",
    "metadata": {},
    "outputs": [],
    "source": []
