--- a/year_wise.ipynb
+++ b/year_wise.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "994eed6e",
    "metadata": {},
    "outputs": [
@@ -307,13 +307,25 @@
     "testx_list = [int(i) for i in list(year_dict.keys())]\n",
     "plt.plot(testx_list,list(year_dict.values()))\n",
     "\n",
+    "\n",
     "plt.xlabel('X-axis')\n",
+    "\n",
     "plt.ylabel('Y-axis')\n",
+    "\n",
     "plt.title('year wise distribution of papers')\n",
     "plt.xticks(yt)\n",
-    "plt.savefig('yearwise.png')\n",
+    "\n",
+    "plt.savefig('yearwise.jpeg')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd153de3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
